--- a/trunk/shamrock-web/pom.xml
+++ b/trunk/shamrock-web/pom.xml
@@ -71,6 +71,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.myfaces.shared</groupId>
+      <artifactId>myfaces-shared-core</artifactId>
+      <version>3.0.3</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.myfaces.trinidad</groupId>
       <artifactId>trinidad-impl</artifactId>
     </dependency>
