--- a/trunk/shamrock-web/webapp/WEB-INF/web.xml
+++ b/trunk/shamrock-web/webapp/WEB-INF/web.xml
@@ -7,23 +7,38 @@
   <display-name>glvnsjc-webapp</display-name>
 
   <!-- =========================================================================== 
-    Context settings                             
+    JSF settings                             
     =========================================================================== -->
-  <context-param>
-    <param-name>csstheme</param-name>
-    <param-value>simplicity</param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>org.apache.myfaces.trinidad.ALTERNATE_VIEW_HANDLER</param-name>
-    <param-value>com.sun.facelets.FaceletViewHandler</param-value>
-  </context-param>
-
+    
   <context-param>
     <param-name>javax.faces.DEFAULT_SUFFIX</param-name>
     <param-value>.xhtml</param-value>
   </context-param>
 
+  <context-param>
+    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+    <param-value>client</param-value>
+    <!--param-value>server</param-value-->
+  </context-param>
+    
+  <servlet>
+    <servlet-name>Faces Servlet</servlet-name>
+    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Faces Servlet</servlet-name>
+    <url-pattern>*.jspx</url-pattern>
+  </servlet-mapping>
+
+  <listener>
+    <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+  </listener>
+
+  <!-- =========================================================================== 
+    Facelets settings                             
+    =========================================================================== -->
   <context-param>
     <param-name>facelets.VIEW_MAPPINGS</param-name>
     <param-value>*.xhtml</param-value>
@@ -35,11 +50,22 @@
   </context-param>
 
   <context-param>
-    <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
-    <param-value>client</param-value>
-    <!--param-value>server</param-value-->
+    <param-name>facelets.DEVELOPMENT</param-name>
+    <param-value>true</param-value>
   </context-param>
 
+  <context-param>
+    <param-name>facelets.LIBRARIES</param-name>
+    <param-value>
+      /WEB-INF/taglibs/acegijsf.taglib.xml;
+
+      /WEB-INF/taglibs/corejsf-validator.taglib.xml;
+    </param-value>
+  </context-param>
+
+  <!-- =========================================================================== 
+    Trinidad settings                             
+    =========================================================================== -->
   <context-param>
     <param-name>org.apache.myfaces.trinidad.USE_APPLICATION_VIEW_CACHE</param-name>
     <param-value>false</param-value>
@@ -56,24 +82,171 @@
   </context-param>
 
   <context-param>
-    <param-name>facelets.DEVELOPMENT</param-name>
-    <param-value>true</param-value>
+    <param-name>org.apache.myfaces.trinidad.ALTERNATE_VIEW_HANDLER</param-name>
+    <param-value>com.sun.facelets.FaceletViewHandler</param-value>
   </context-param>
 
+  <servlet>
+    <servlet-name>resources</servlet-name>
+    <servlet-class>org.apache.myfaces.trinidad.webapp.ResourceServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>resources</servlet-name>
+    <url-pattern>/adf/*</url-pattern>
+  </servlet-mapping>
+
+  <filter>
+    <filter-name>trinidad</filter-name>
+    <filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>trinidad</filter-name>
+    <servlet-name>Faces Servlet</servlet-name>
+  </filter-mapping>
+
+  <!-- =========================================================================== --> 
+  <!--  Richfaces settings                                                         -->                             
+  <!-- =========================================================================== -->
+  
+  <!-- 
+  <context-param>
+    <param-name>org.ajax4jsf.VIEW_HANDLERS</param-name>
+    <param-value>com.sun.facelets.FaceletViewHandler</param-value>
+  </context-param>
+   -->
   <context-param>
     <param-name>org.richfaces.SKIN</param-name>
     <param-value>blueSky</param-value>
   </context-param>
 
+  <filter>
+    <filter-name>richfaces</filter-name>
+    <filter-class>org.ajax4jsf.Filter</filter-class>
+    <init-param>
+      <param-name>forceparser</param-name>
+      <param-value>false</param-value>
+    </init-param>
+  </filter>
+  
+  <filter-mapping>
+    <filter-name>richfaces</filter-name>
+    <servlet-name>Faces Servlet</servlet-name>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+  </filter-mapping>
+
+  <!-- =========================================================================== --> 
+  <!--  JSTL                                                                       -->                             
+  <!-- =========================================================================== -->
+
   <context-param>
-    <param-name>facelets.LIBRARIES</param-name>
-    <param-value>
-      /WEB-INF/taglibs/acegijsf.taglib.xml;
+    <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
+    <param-value>org.glvnsjc.webapp.resource.ApplicationResources</param-value>
+  </context-param>
 
-      /WEB-INF/taglibs/corejsf-validator.taglib.xml;
+  <context-param>
+    <param-name>javax.servlet.jsp.jstl.fmt.fallbackLocale</param-name>
+    <param-value>en</param-value>
+  </context-param>
 
-      /WEB-INF/taglibs/tomahawk.taglib.xml
-    </param-value>
+  <!-- =========================================================================== --> 
+  <!--  Spring settings                                                            -->                             
+  <!-- =========================================================================== -->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+
+  <listener>
+    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+  </listener>
+
+  <listener>
+    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  </listener>
+
+  <!-- =========================================================================== --> 
+  <!--  Orchestra Settings                                                         -->                             
+  <!-- =========================================================================== -->
+  
+  <listener>
+    <listener-class>
+      org.apache.myfaces.orchestra.conversation.servlet.ConversationManagerSessionListener
+    </listener-class>
+  </listener>
+
+  <!-- =========================================================================== --> 
+  <!--  Security settings                                                            -->                             
+  <!-- =========================================================================== -->
+  <filter>
+    <filter-name>securityFilter</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    <init-param>
+      <param-name>targetBeanName</param-name>
+      <param-value>springSecurityFilterChain</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>securityFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <!-- =========================================================================== --> 
+  <!--  UTF8 Settings                                                              -->                             
+  <!-- =========================================================================== -->
+
+  <filter>
+    <filter-name>encodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+    <init-param>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
+    </init-param>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>encodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+
+  <!-- =========================================================================== --> 
+  <!--  JSP pages Settings                                                         -->                             
+  <!-- =========================================================================== -->
+  <filter>
+    <filter-name>sitemesh</filter-name>
+    <filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>sitemesh</filter-name>
+    <url-pattern>/login.jsp</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+  </filter-mapping>
+
+  <!-- =========================================================================== 
+    This webapp settings                             
+    =========================================================================== -->
+  <context-param>
+    <param-name>csstheme</param-name>
+    <param-value>simplicity</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>webAppRootKey</param-name>
+    <param-value>glvnsjc.webroot</param-value>
+  </context-param>
+
+  <context-param>
+    <param-name>log4jConfigLocation</param-name>
+    <param-value>/WEB-INF/log4j.properties</param-value>
   </context-param>
 
   <context-param>
@@ -102,168 +275,9 @@
     </param-value>
   </context-param>
 
-  <context-param>
-    <param-name>webAppRootKey</param-name>
-    <param-value>glvnsjc.webroot</param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>log4jConfigLocation</param-name>
-    <param-value>/WEB-INF/log4j.properties</param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
-    <param-value>org.glvnsjc.webapp.resource.ApplicationResources</param-value>
-  </context-param>
-
-  <context-param>
-    <param-name>javax.servlet.jsp.jstl.fmt.fallbackLocale</param-name>
-    <param-value>en</param-value>
-  </context-param>
-
-  <!-- =========================================================================== 
-    Servlet and Servlet mappings                             
-    =========================================================================== -->
-  <servlet>
-    <servlet-name>Faces Servlet</servlet-name>
-    <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>Faces Servlet</servlet-name>
-    <url-pattern>*.jspx</url-pattern>
-  </servlet-mapping>
-
-  <servlet>
-    <servlet-name>resources</servlet-name>
-    <servlet-class>org.apache.myfaces.trinidad.webapp.ResourceServlet</servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>resources</servlet-name>
-    <url-pattern>/adf/*</url-pattern>
-  </servlet-mapping>
-
-  <!-- =========================================================================== 
-    Listeners                          
-    =========================================================================== -->
-
-  <listener>
-    <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
-  </listener>
-
-  <listener>
-    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-  </listener>
-
-  <listener>
-    <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
-  </listener>
-
-  <listener>
-    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-  </listener>
-
-  <listener>
-    <listener-class>
-      org.apache.myfaces.orchestra.conversation.servlet.ConversationManagerSessionListener
-    </listener-class>
-  </listener>
-
   <listener>
     <listener-class>org.glvnsjc.webapp.listener.StartupListener</listener-class>
   </listener>
-  
-  <!-- =========================================================================== 
-    Filter settings, order are important                          
-    =========================================================================== -->
-    
-  <filter>
-    <filter-name>securityFilter</filter-name>
-    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-    <init-param>
-      <param-name>targetBeanName</param-name>
-      <param-value>springSecurityFilterChain</param-value>
-    </init-param>
-  </filter>
-
-  <filter-mapping>
-    <filter-name>securityFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-      
-  <filter>
-    <filter-name>trinidad</filter-name>
-    <filter-class>org.apache.myfaces.trinidad.webapp.TrinidadFilter</filter-class>
-  </filter>
-
-  <filter-mapping>
-    <filter-name>trinidad</filter-name>
-    <servlet-name>Faces Servlet</servlet-name>
-  </filter-mapping>
-
-  <filter>
-    <filter-name>richfaces</filter-name>
-    <filter-class>org.ajax4jsf.Filter</filter-class>
-    <init-param>
-      <param-name>forceparser</param-name>
-      <param-value>false</param-value>
-    </init-param>
-  </filter>
-  
-  <filter-mapping>
-    <filter-name>richfaces</filter-name>
-    <servlet-name>Faces Servlet</servlet-name>
-    <dispatcher>REQUEST</dispatcher>
-    <dispatcher>FORWARD</dispatcher>
-    <dispatcher>INCLUDE</dispatcher>
-  </filter-mapping>
-
-  <filter>
-    <filter-name>extensionsFilter</filter-name>
-    <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
-    <init-param>
-      <param-name>maxFileSize</param-name>
-      <param-value>2m</param-value>
-    </init-param>
-  </filter>
-  
-  <filter-mapping>
-    <filter-name>extensionsFilter</filter-name>
-    <servlet-name>Faces Servlet</servlet-name>
-  </filter-mapping>
-  
-  <filter>
-    <filter-name>encodingFilter</filter-name>
-    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-    <init-param>
-      <param-name>forceEncoding</param-name>
-      <param-value>true</param-value>
-    </init-param>
-  </filter>
-
-  <filter-mapping>
-    <filter-name>encodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
-
-  <filter>
-    <filter-name>sitemesh</filter-name>
-    <filter-class>com.opensymphony.module.sitemesh.filter.PageFilter</filter-class>
-  </filter>
-
-  <filter-mapping>
-    <filter-name>sitemesh</filter-name>
-    <url-pattern>/login.jsp</url-pattern>
-    <dispatcher>REQUEST</dispatcher>
-    <dispatcher>FORWARD</dispatcher>
-  </filter-mapping>
   
   <filter>
     <filter-name>viewExpiredFilter</filter-name>
@@ -285,7 +299,6 @@
     <filter-name>messageFilter</filter-name>
     <filter-class>org.glvnsjc.webapp.filter.MessageFilter</filter-class>
   </filter>
-
 
   <!--============================================================================-->
   <!-- Welcome Configuration                                                      -->
